# xhnSTL

./: .gitignore
Android/: common.h
ArchLinux/: CMakeLists.txt  CMakeLists.txt~
Linux/: CMakeLists (copy).txt  CMakeLists.txt  CMakeLists.txt~  build.sh  build.sh~  clean.sh~  common.h  copy_headers.sh  etypes.h  test.cpp
Linux/UnitTest/: CMakeLists.txt  CMakeLists.txt~  build.sh  build.sh~  clean.sh~  test.cpp
Mac/: copy_headers.sh
Mac/cmake/: CMakeLists.txt  build.sh
Mac/xhnSTL/: Info.plist  common.h  etypes.h  xhnSTL.h  xhnSTLStatic.h
Mac/xhnSTL.xcodeproj/: project.pbxproj
Mac/xhnSTL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Mac/xhnSTL.xcodeproj/project.xcworkspace/xcshareddata/: xhnSTL.xcscmblueprint
Mac/xhnSTL.xcodeproj/project.xcworkspace/xcuserdata/joumining.xcuserdatad/: UserInterfaceState.xcuserstate
Mac/xhnSTL.xcodeproj/project.xcworkspace/xcuserdata/xhnsworks.xcuserdatad/: UserInterfaceState.xcuserstate
Mac/xhnSTL.xcodeproj/xcuserdata/joumining.xcuserdatad/xcschemes/: xcschememanagement.plist
Mac/xhnSTL.xcodeproj/xcuserdata/xhnsworks.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Mac/xhnSTL.xcodeproj/xcuserdata/xhnsworks.xcuserdatad/xcschemes/: xcschememanagement.plist  xhnSTL.xcscheme  xhnSTLTests.xcscheme
Mac/xhnSTLTests/: ColladaTool.hpp  xhnSTLTests.m  xhnSTLTests.mm
Mac/xhnSTL_Static.xcodeproj/: project.pbxproj
Mac/xhnSTL_Static.xcodeproj/project.xcworkspace/xcshareddata/: xhnSTL_Static.xcscmblueprint
Mac/xhnSTL_Static.xcodeproj/xcuserdata/joumining.xcuserdatad/xcschemes/: xhnSTL.xcscheme
Mac/xhnSTL_Static.xcodeproj/xcuserdata/xhnsworks.xcuserdatad/xcschemes/: xhnSTL.xcscheme  xhnSTLTests.xcscheme
Win/: CMakeLists.txt  CMakeLists_.txt  copy_headers.sh  xhnSTL.sln
Win/xhnSTL/: ReadMe.txt  common.h  etypes.h  unistd.h  xhnSTL.cpp  xhnSTL.vcxproj  xhnSTL.vcxproj.filters
Win/xhnSTL/xhnSTL/: stdafx.cpp  xhnSTL.vcxproj  xhnSTL.vcxproj.filters
Win32/xhnSTL/: xhnSTL.sln
Win32/xhnSTL/xhnSTL/xhnSTL.Shared/: common.h  xhnSTL.Shared.vcxitems  xhnSTL.Shared.vcxitems.filters  xhnSTL.cpp
Win32/xhnSTL/xhnSTL/xhnSTL.Windows/: xhnSTL.Windows.vcxproj
Win32/xhnSTL/xhnSTL/xhnSTL.WindowsPhone/: xhnSTL.WindowsPhone.vcxproj
eLinux/: CMakeLists.txt  build.sh  clean.sh  common.h  etypes.h
eLinux/UnitTest/: clean.sh  test.cpp
iOS/cmake/: CMakeLists.txt  build.sh  ios.toolchain.cmake
iOS/xhnSTL/: Info.plist  common.h  etypes.h  xhnSTL.h  xhnSTLStatic.h
iOS/xhnSTL.xcodeproj/: project.pbxproj
iOS/xhnSTL.xcodeproj/project.xcworkspace/xcshareddata/: xhnSTL.xccheckout
iOS/xhnSTL.xcodeproj/project.xcworkspace/xcuserdata/joumining.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/xhnSTL.xcodeproj/project.xcworkspace/xcuserdata/xhnsworks.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/xhnSTL.xcodeproj/xcuserdata/joumining.xcuserdatad/xcschemes/: xhnSTL.xcscheme
iOS/xhnSTL.xcodeproj/xcuserdata/xhnsworks.xcuserdatad/xcschemes/: xcschememanagement.plist  xhnSTL.xcscheme
iOS/xhnSTL/xhnSTL.xcodeproj/: project.pbxproj
iOS/xhnSTL/xhnSTL.xcodeproj/project.xcworkspace/xcuserdata/joumining.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/xhnSTL/xhnSTL.xcodeproj/xcuserdata/joumining.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/xhnSTL/xhnSTLTests/: xhnSTLTests.m
iOS/xhnSTLTests/: Info.plist
xhnSTL/: Info.plist  xhnSTL.h
xhnSTL.xcodeproj/: project.pbxproj
xhnSTL.xcodeproj/project.xcworkspace/xcshareddata/: xhnSTL.xccheckout
xhnSTL.xcodeproj/project.xcworkspace/xcuserdata/joumining.xcuserdatad/: UserInterfaceState.xcuserstate
xhnSTL.xcodeproj/xcuserdata/joumining.xcuserdatad/xcschemes/: xcschememanagement.plist  xhnSTL.xcscheme
xhnSTL.xcodeproj/xcuserdata/xhnsworks.xcuserdatad/xcschemes/: xcschememanagement.plist  xhnSTL.xcscheme
xhnSTL/TIFF/: TIFFAgent.cpp  TIFFAgent.h
xhnSTL/TIFF/libtiff-4.0.3/: tif_config.h  tiffconf.h
xhnSTL/android/: android_file_manager.cpp  android_file_manager.hpp
xhnSTL/linux/: LinuxString.cpp  LinuxString.hpp  linux_file_manager.cpp  linux_file_manager.hpp
xhnSTL/objc/: ObjCPropertys.h  ObjCPropertys.m  ObjCString.h  ObjCString.mm  Singleton.h  apple_file_manager.h  apple_file_manager.mm  asm_syntax_converter.hpp  asm_syntax_converter.mm  llvm_parser.hpp  llvm_parser.mm  swift_parser.hpp  swift_parser.mm  symbol_buffer.hpp  xhn_filesystem_node.mm
xhnSTL/win/: WinString.cpp  swift_parser.cpp  win_file_manager.cpp  win_file_manager.hpp
xhnSTL/xlibc/: array.h  common.h  comparison_algorithm.h  container.h  cpu.c  cpu.h  cpu_arm.c  cpu_common.c  cpu_x86_64.c  eassert.c  eassert.h  elog.c  elog.h  emem.c  emem.h  emem_allocator.h  esignal.h  estring.c  estring.h  exception.h  hash.c  hash.h  hash_gcc.c  list.c  list.h  list_base.h  mem.h  prime.c  prime.h  rwbuffer.c  rwbuffer.h  sha256.c  sha256.h  spin_lock.h  stack.c  stack.h  static_string.c  static_string.h  tree.c  tree.h  (+2 more)
xhnSTL/xstl/: exception.cpp  map.hpp  rtti.cpp  rtti.hpp  timer.h  xhn_atomic_bool.hpp  xhn_atomic_operation.hpp  xhn_atomic_operation.hpp~  xhn_atomic_ptr.hpp  xhn_btree.cpp  xhn_btree.hpp  xhn_cache.hpp  xhn_cloned_ptr.hpp  xhn_concurrent.cpp  xhn_concurrent.hpp  xhn_config.hpp  xhn_context.cpp  xhn_context.h  xhn_crypto.cpp  xhn_crypto.hpp  xhn_device.cpp  xhn_device.h  xhn_dictionary.hpp  xhn_duplicate_finder.cpp  xhn_duplicate_finder.h  xhn_exception.cpp  xhn_exception.hpp  xhn_file_stream.cpp  xhn_file_stream.hpp  xhn_filesystem_node.cpp  xhn_filesystem_node.h  xhn_fixed_queue.hpp  xhn_functor.hpp  xhn_garbage_collector.cpp  xhn_garbage_collector.hpp  xhn_gc_array.cpp  xhn_gc_array.h  xhn_gc_container_base.cpp  xhn_gc_container_base.h  xhn_gc_string.cpp  (+84 more)
xhnSTLTests/: xhnSTLTests.mm
